Add build watch commands

--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "A desktop application that lets you create beautiful polygon based art",
   "main": "index.js",
   "scripts": {
-	"build": "npm run build:main && npm run build:ui",
-	"build:main": "tsc -p ./src/main",
-	"build:ui": "tsc -p ./src/ui",
+    "build": "npm run build:main && npm run build:ui",
+    "build:main": "tsc -p ./src/main",
+    "build:ui": "tsc -p ./src/ui",
+    "build-watch": "concurrently --raw \"npm run build-watch:main\" \"npm run build-watch:ui\"",
+    "build-watch:main": "tsc -w -p ./src/main",
+    "build-watch:ui": "tsc -w -p ./src/ui",
     "lint:main": "tslint -p ./src/main/tsconfig.json --type-check",
     "lint:ui": "tslint -p ./src/ui/tsconfig.json --type-check",
     "start": "electron src/main/index.js",
@@ -16,6 +19,7 @@
   "license": "UNLICENSED",
   "dependencies": {},
   "devDependencies": {
+    "concurrently": "3.5.0",
     "electron": "1.7.9",
     "tslint": "5.7.0",
     "typescript": "2.5.3"
