Ignore generated js

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
 		"**/.hg": true,
 		"**/CVS": true,
 		"**/.DS_Store": true,
-		".vscode/symbols.json": true
+		".vscode/symbols.json": true,
+		"src/**/*.js": true,
+		"src/**/*.js.map": true
 	}
 }
