Move toolbar and canvas into their own components

--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "assert-never": "1.0.0",
     "bootstrap": "3.3.7",
     "classnames": "2.2.5",
+    "csx": "8.5.0",
     "font-awesome": "4.7.0",
+    "jquery": "3.2.1",
     "react": "16.0.0",
     "react-bootstrap": "0.31.3",
     "react-dom": "16.0.0",
@@ -46,6 +48,7 @@
     "@types/chai": "4.0.4",
     "@types/classnames": "2.2.3",
     "@types/electron": "1.6.10",
+    "@types/jquery": "3.2.15",
     "@types/mocha": "2.2.43",
     "@types/react": "16.0.10",
     "@types/react-bootstrap": "0.31.6",
