Add menus for file management, recent file list

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     ]
   },
   "dependencies": {
+    "@types/clone": "0.1.30",
     "app-root-path": "2.0.1",
     "assert-never": "1.0.0",
     "b64-to-blob": "1.2.19",
@@ -37,15 +38,19 @@
     "bootswatch": "3.3.7",
     "cdt2d": "1.0.0",
     "classnames": "2.2.5",
+    "clone": "2.1.1",
     "csx": "8.5.0",
     "eases": "1.0.8",
     "font-awesome": "4.7.0",
+    "fs-extra": "4.0.2",
     "jquery": "3.2.1",
     "key-code": "0.0.1",
+    "mkdirp": "0.5.1",
     "react": "16.0.0",
     "react-bootstrap": "0.31.3",
     "react-dom": "16.0.0",
     "react-redux": "5.0.6",
+    "source-map-support": "0.5.0",
     "typestyle": "1.4.3",
     "uuid": "3.1.0"
   },
@@ -54,12 +59,15 @@
     "@types/chai": "4.0.4",
     "@types/classnames": "2.2.3",
     "@types/electron": "1.6.10",
+    "@types/fs-extra": "4.0.3",
     "@types/jquery": "3.2.15",
+    "@types/mkdirp": "0.5.1",
     "@types/mocha": "2.2.43",
     "@types/react": "16.0.10",
     "@types/react-bootstrap": "0.31.6",
     "@types/react-dom": "16.0.1",
     "@types/react-redux": "5.0.10",
+    "@types/source-map-support": "0.4.0",
     "@types/uuid": "3.4.3",
     "chai": "4.1.2",
     "concurrently": "3.5.0",
