Add dictionary terms

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,9 @@
 		"Crosshair",
 		"Polygen",
 		"Unmount",
-		"submenu"
+		"initialise",
+		"submenu",
+		"toggledevtools"
 	],
 	"mocha.enabled": false
 }
