--- a/package.json
+++ b/package.json
@@ -50,10 +50,10 @@
     "jquery": "3.2.1",
     "key-code": "0.0.1",
     "mkdirp": "0.5.1",
-    "react": "16.8.2",
+    "react": "16.13.1",
     "react-bootstrap": "1.0.0-beta.5",
-    "react-dom": "16.8.2",
-    "react-redux": "6.0.0",
+    "react-dom": "16.13.1",
+    "react-redux": "7.2.1",
     "redux": "4.0.1",
     "source-map-support": "0.5.0",
     "titlecase": "1.1.2",
@@ -69,9 +69,10 @@
     "@types/jest": "24.0.5",
     "@types/jquery": "3.3.29",
     "@types/mkdirp": "0.5.1",
+    "@types/node": "14.0.26",
     "@types/react": "16.8.3",
-    "@types/react-dom": "16.8.2",
-    "@types/react-redux": "7.0.1",
+    "@types/react-dom": "16.9.8",
+    "@types/react-redux": "7.1.9",
     "@types/source-map-support": "0.4.0",
     "@types/uuid": "3.4.3",
     "concurrently": "3.5.0",
@@ -81,6 +82,6 @@
     "rimraf": "2.6.2",
     "ts-jest": "23.10.5",
     "tslint": "5.7.0",
-    "typescript": "3.3.3"
+    "typescript": "3.9.7"
   }
 }
