feat: optimise image storage (store duplicate images once only)

--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -4,5 +4,5 @@
     "noEmit": false,
     "lib": ["dom", "es6"]
   },
-  "files": ["index.ts"]
+  "files": ["../shared/typings/array.d.ts", "index.ts"]
 }
